package com.enriqueajin.newsapp.util

object TestTags {

    // BottomBar
    const val BOTTOM_BAR_ITEM = "bottom_bar_item"
    const val BOTTOM_BAR_ITEM_HOME = "bottom_bar_item0"
    const val BOTTOM_BAR_ITEM_SEARCH = "bottom_bar_item1"
    const val BOTTOM_BAR_ITEM_FAVORITES = "bottom_bar_item2"

    // CategoryGroup
    const val CATEGORY = "category"
    const val CATEGORY_GROUP_LAZY_ROW = "category_group_lazy_row"

    // LatestArticlesCarousel
    const val CAROUSEL_HORIZONTAL_PAGER = "carousel_horizontal_pager"
    const val LATEST_ARTICLE_ITEM = "latest_article_item"

    // ArticlesByKeyword (Home LazyRow)
    const val ARTICLES_BY_KEYWORD_LAZY_ROW = "articles_by_keyword_lazy_row"
    const val ARTICLES_BY_KEYWORD_ITEM = "articles_by_keyword_item"

    // AllArticles (Home)
    const val ALL_ARTICLES_CIRCULAR_PROGRESS = "all_articles_circular_bar"
    const val ALL_ARTICLES_ARTICLES_LIST = "all_articles_articles_list"
    const val ALL_ARTICLES_ERROR = "all_articles_error"
    const val ALL_ARTICLES_KEYWORD = "all_articles_keyword"
    const val ALL_ARTICLES_SEE_ALL = "all_articles_see_all"

    // Home
    const val HOME = "home"
    const val HOME_ARTICLES_BY_CATEGORY = "home_articles_by_category"
}